--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -1,5 +1,5 @@
 {
-  "home-page": "Insta Downloader",
+  "home-page": "Yuklab olish",
   "history-page": "Tarix",
   "about-page": "Haqida",
   "input-title": "Insta roliklar, postlar, hikoyalar va IGTV-ni yuklab oling",
