--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,6 +1,7 @@
 {
   "home-page": "تحميل الانستا",
   "history-page": "تاريخ",
+  "contact-page": "اتصال",
   "about-page": "عن",
   "input-title": "قم بتنزيل بكرات Insta والنشر والقصة وIGTV",
   "input-text": "عنوان URL السابق لـ Instagram",
