--- a/public/locales/chi/translation.json
+++ b/public/locales/chi/translation.json
@@ -2,6 +2,7 @@
   "home-page": "Insta 下载器",
   "history-page": "历史",
   "about-page": "关于",
+  "contact-page": "接触",
   "input-title": "下载 Insta reels、帖子、故事和 IGTV",
   "input-text": "过去的 URL Instagram",
   "download-text": "下载",
