--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,6 +2,7 @@
   "home-page": "Insta Downloader",
   "history-page": "History",
   "about-page": "About",
+  "contact-page": "Contact",
   "input-title": "Download  Insta reels, post, story and IGTV",
   "input-text": "Past URL Instagram",
   "download-text": "Download",
