--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -2,6 +2,7 @@
   "home-page": "インスタダウンローダー",
   "history-page": "歴史",
   "about-page": "について",
+  "contact-page": "コンタクト",
   "input-title": "Insta リール、投稿、ストーリー、IGTV をダウンロード",
   "input-text": "過去のURL Instagram",
   "download-text": "ダウンロード",
