--- a/public/locales/kr/translation.json
+++ b/public/locales/kr/translation.json
@@ -2,6 +2,7 @@
   "home-page": "인스타 다운로더",
   "history-page": "역사",
   "about-page": "에 대한",
+  "contact-page": "연락하다s",
   "input-title": "Insta 릴, 포스트, 스토리 및 IGTV를 다운로드하세요.",
   "input-text": "과거 URL 인스타그램",
   "download-text": "다운로드",
