--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,6 +2,7 @@
   "home-page": "Инста-загрузчик",
   "history-page": "История",
   "about-page": "О Insta Downloader",
+  "contact-page": "Контакт",
   "input-title": "Загрузите ролики Insta, пост, историю и IGTV",
   "input-text": "Past URL Instagram",
   "download-text": "Скачать",
