--- a/public/locales/tr/translation.json
+++ b/public/locales/tr/translation.json
@@ -2,6 +2,7 @@
   "home-page": "Insta İndirici",
   "history-page": "Tarih",
   "about-page": "Hakkında",
+  "contact-page": "temas etmek",
   "input-title": "Insta makaralarını, gönderilerini, hikayelerini ve IGTV'yi indirin",
   "input-text": "Geçmiş URL Instagram",
   "download-text": "İndirmek",
