--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -1,6 +1,7 @@
 {
   "home-page": "Завантажувач Insta",
-  "history-page": "історія", 
+  "history-page": "історія",
+  "contact-page": "Зв'язатися",
   "about-page": "про Insta Downloader",
   "input-title": "Завантажуйте ролики Insta, публікації, історії та IGTV",
   "input-text": "Попередня URL-адреса Instagram",
