--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -1,7 +1,7 @@
 {
   "home-page": "Yuklab olish",
   "history-page": "Tarix",
-  "about-page": "Haqida",
+  "about-page": "Biz haqimizda",
   "contact-page": "Bog'lanish",
   "input-title": "Insta roliklar, postlar, hikoyalar va IGTV-ni yuklab oling",
   "input-text": "Instagramning URL manzilini yozing",
