added: ads lang

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -18,5 +18,6 @@
   "privacy-policy-non-personal-title": "معلومات التعريف غير الشخصية",
   "privacy-policy-non-personal-text": "قد نقوم بجمع معلومات تعريف غير شخصية عن المستخدمين عندما يتفاعلون مع موقعنا. قد تتضمن معلومات التعريف غير الشخصية اسم المتصفح ونوع الكمبيوتر والمعلومات الفنية حول وسائل اتصال المستخدمين بموقعنا، مثل نظام التشغيل ومقدمي خدمات الإنترنت المستخدمين وغيرها من المعلومات المماثلة. قد نقوم بجمع معلومات تعريف غير شخصية عن المستخدمين عندما يتفاعلون مع موقعنا. قد تتضمن معلومات التعريف غير الشخصية اسم المتصفح ونوع الكمبيوتر والمعلومات الفنية حول وسائل اتصال المستخدمين بموقعنا، مثل نظام التشغيل ومقدمي خدمات الإنترنت المستخدمين وغيرها من المعلومات المماثلة.",
   "contact-us-title": "اتصل بنا",
-  "contact-us-text": "يرجى وصف تفاصيل الاتصال بالتفصيل."
+  "contact-us-text": "يرجى وصف تفاصيل الاتصال بالتفصيل.",
+  "ads-text": "لجعل هذا المشروع حقيقة، نحن بحاجة إلى تمويل. إذا كنت ترغب في مساعدتنا، يمكنك وضع إعلانك على موقعنا الإلكتروني."
 }
