--- a/public/locales/chi/translation.json
+++ b/public/locales/chi/translation.json
@@ -18,5 +18,6 @@
   "privacy-policy-non-personal-title": "非个人身份信息",
   "privacy-policy-non-personal-text": "每当用户与我们的网站互动时，我们可能会收集有关用户的非个人身份信息。非个人身份信息可能包括浏览器名称、计算机类型以及有关用户连接到我们网站的方式的技术信息，例如所使用的操作系统和互联网服务提供商以及其他类似信息。每当用户与我们的网站互动时，我们可能会收集有关用户的非个人身份信息。非个人身份信息可能包括浏览器名称、计算机类型以及有关用户连接到我们网站的方式的技术信息，例如所使用的操作系统和互联网服务提供商以及其他类似信息。",
   "contact-us-title": "联系我们",
-  "contact-us-text": "请详细描述联系方式。"
+  "contact-us-text": "请详细描述联系方式。",
+  "ads-text": "要使这个项目成为现实，我们需要资金。如果您愿意帮助我们，可以在我们的网站上投放广告。"
 }
