--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,5 +18,6 @@
   "privacy-policy-non-personal-title": "Non-personal identification information",
   "privacy-policy-non-personal-text": "We may collect non-personal identification information about Users whenever they interact with our Site. Non-personal identification information may include the browser name, the type of computer and technical information about Users means of connection to our Site, such as the operating system and the Internet service providers utilized and other similar information. We may collect non-personal identification information about Users whenever they interact with our Site. Non-personal identification information may include the browser name, the type of computer and technical information about Users means of connection to our Site, such as the operating system and the Internet service providers utilized and other similar information.",
   "contact-us-title": "Contact Us",
-  "contact-us-text": "Please describe the contact details in detail."
+  "contact-us-text": "Please describe the contact details in detail.",
+  "ads-text": "To make this project a reality, we need funding. If you would like to help us, you can place your advertisement on our website."
 }
