--- a/public/locales/kr/translation.json
+++ b/public/locales/kr/translation.json
@@ -18,5 +18,6 @@
   "privacy-policy-non-personal-title": "비개인식별정보",
   "privacy-policy-non-personal-text": "당사는 사용자가 당사 사이트와 상호 작용할 때마다 사용자에 대한 비개인 식별 정보를 수집할 수 있습니다. 비개인 식별 정보에는 브라우저 이름, 컴퓨터 유형, 운영 체제, 사용된 인터넷 서비스 제공업체 등 사용자가 당사 사이트에 연결하는 방법에 관한 기술 정보 및 기타 유사한 정보가 포함될 수 있습니다. 당사는 사용자가 당사 사이트와 상호 작용할 때마다 사용자에 대한 비개인 식별 정보를 수집할 수 있습니다. 비개인 식별 정보에는 브라우저 이름, 컴퓨터 유형, 운영 체제, 사용된 인터넷 서비스 제공업체 등 사용자가 당사 사이트에 연결하는 방법에 관한 기술 정보 및 기타 유사한 정보가 포함될 수 있습니다.",
   "contact-us-title": "문의하기",
-  "contact-us-text": "연락처를 자세히 기재해주세요."
+  "contact-us-text": "연락처를 자세히 기재해주세요.",
+  "ads-text": "이 프로젝트를 현실로 만들기 위해서는 자금이 필요합니다. 우리를 도와주고 싶으시다면, 저희 웹사이트에 광고를 게재할 수 있습니다."
 }
