--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -18,5 +18,6 @@
   "privacy-policy-non-personal-title": "Неличная идентификационная информация",
   "privacy-policy-non-personal-text": "Мы можем собирать неличную идентификационную информацию о Пользователях всякий раз, когда они взаимодействуют с нашим Сайтом. Неличная идентификационная информация может включать имя браузера, тип компьютера и техническую информацию о средствах подключения Пользователей к нашему Сайту, таких как операционная система и используемые поставщики интернет-услуг, а также другую подобную информацию. Мы можем собирать неличную идентификационную информацию о Пользователях всякий раз, когда они взаимодействуют с нашим Сайтом. Неличная идентификационная информация может включать имя браузера, тип компьютера и техническую информацию о средствах подключения Пользователей к нашему Сайту, таких как операционная система и используемые поставщики интернет-услуг, а также другую подобную информацию.",
   "contact-us-title": "Связаться с нами",
-  "contact-us-text": "Пожалуйста, опишите контактные данные подробно."
+  "contact-us-text": "Пожалуйста, опишите контактные данные подробно.",
+  "ads-text": "Для реализации этого проекта нам необходимы средства. Если вы хотите помочь нам, вы можете разместить свою рекламу на нашем сайте."
 }
