--- a/public/locales/tr/translation.json
+++ b/public/locales/tr/translation.json
@@ -18,5 +18,6 @@
   "privacy-policy-non-personal-title": "Kişisel olmayan kimlik bilgileri",
   "privacy-policy-non-personal-text": "Sitemizle etkileşimde bulunduklarında Kullanıcılar hakkında kişisel olmayan kimlik bilgileri toplayabiliriz. Kişisel olmayan kimlik bilgileri, tarayıcı adını, bilgisayar türünü ve Kullanıcıların Sitemize bağlantı araçlarına ilişkin teknik bilgileri, örneğin işletim sistemi ve kullanılan İnternet servis sağlayıcılarını ve diğer benzer bilgileri içerebilir. Sitemizle etkileşimde bulunduklarında Kullanıcılar hakkında kişisel olmayan kimlik bilgileri toplayabiliriz. Kişisel olmayan kimlik bilgileri, tarayıcı adını, bilgisayar türünü ve Kullanıcıların Sitemize bağlantı araçlarına ilişkin teknik bilgileri, örneğin işletim sistemi ve kullanılan İnternet servis sağlayıcılarını ve diğer benzer bilgileri içerebilir.",
   "contact-us-title": "Bize Ulaşın",
-  "contact-us-text": "Lütfen iletişim bilgilerini ayrıntılı olarak açıklayın."
+  "contact-us-text": "Lütfen iletişim bilgilerini ayrıntılı olarak açıklayın.",
+  "ads-text": "Bu projeyi gerçekleştirmek için fon gerekiyor. Bize yardım etmek isterseniz, reklamınızı web sitemize yerleştirebilirsiniz."
 }
