--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -18,5 +18,6 @@
   "privacy-policy-non-personal-title": "Неособиста ідентифікаційна інформація",
   "privacy-policy-non-personal-text": "Ми можемо збирати неособисту ідентифікаційну інформацію про користувачів щоразу, коли вони взаємодіють із нашим сайтом. Неособиста ідентифікаційна інформація може включати назву браузера, тип комп’ютера та технічну інформацію про засоби підключення Користувача до нашого Сайту, наприклад операційну систему та використовуваних постачальників послуг Інтернету та іншу подібну інформацію. Ми можемо збирати неособисту ідентифікаційну інформацію про користувачів щоразу, коли вони взаємодіють із нашим сайтом. Неособиста ідентифікаційна інформація може включати назву браузера, тип комп’ютера та технічну інформацію про засоби підключення Користувача до нашого Сайту, наприклад операційну систему та використовуваних постачальників послуг Інтернету та іншу подібну інформацію.",
   "contact-us-title": "Зв'яжіться з нами",
-  "contact-us-text": "Детально опишіть контактні дані."
+  "contact-us-text": "Детально опишіть контактні дані.",
+  "ads-text": "Щоб реалізувати цей проект, нам потрібні кошти. Якщо ви хочете допомогти нам, ви можете розмістити свою рекламу на нашому веб-сайті."
 }
