--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -18,5 +18,6 @@
   "privacy-policy-non-personal-title": "Shaxsiy bo'lmagan identifikatsiya ma'lumotlari",
   "privacy-policy-non-personal-text": "Foydalanuvchilar bizning saytimiz bilan o'zaro aloqada bo'lganda ular haqida shaxsiy bo'lmagan identifikatsiya ma'lumotlarini to'plashimiz mumkin. Shaxsiy bo'lmagan identifikatsiya ma'lumotlari brauzer nomini, kompyuter turini va Foydalanuvchilar haqidagi texnik ma'lumotlarni Saytimizga ulanish vositalarini, masalan, operatsion tizim va foydalaniladigan Internet-provayderlar va shunga o'xshash ma'lumotlarni o'z ichiga olishi mumkin. Foydalanuvchilar bizning saytimiz bilan o'zaro aloqada bo'lganda ular haqida shaxsiy bo'lmagan identifikatsiya ma'lumotlarini to'plashimiz mumkin. Shaxsiy bo'lmagan identifikatsiya ma'lumotlari brauzer nomini, kompyuter turini va Foydalanuvchilar haqidagi texnik ma'lumotlarni Saytimizga ulanish vositalarini, masalan, operatsion tizim va foydalaniladigan Internet-provayderlar va shunga o'xshash ma'lumotlarni o'z ichiga olishi mumkin.",
   "contact-us-title": "Biz bilan bog'lanish",
-  "contact-us-text": "Iltimos, aloqa ma'lumotlarini batafsil tasvirlab bering."
+  "contact-us-text": "Iltimos, aloqa ma'lumotlarini batafsil tasvirlab bering.",
+  "ads-text": "Ushbu loyihani haqiqatga aylantirish uchun bizga mablag' kerak. Agar bizga yordam bermoqchi bo'lsangiz, veb-saytimizda o'zingizning reklamangizni joylashtirishingiz mumkin."
 }
