--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -18,5 +18,6 @@
   "privacy-policy-non-personal-title": "個人を特定しない情報",
   "privacy-policy-non-personal-text": "当社は、ユーザーが当社サイトとやりとりする際に、非個人識別情報を収集することがあります。非個人識別情報には、ブラウザ名、コンピュータの種類、当社サイトへの接続方法に関する技術情報（オペレーティングシステム、インターネットサービスプロバイダーなど）、その他の類似情報が含まれる場合があります。当社は、ユーザーが当社サイトとやりとりする際に、非個人識別情報を収集することがあります。非個人識別情報には、ブラウザ名、コンピュータの種類、当社サイトへの接続方法に関する技術情報（オペレーティングシステム、インターネットサービスプロバイダーなど）、その他の類似情報が含まれる場合があります。",
   "contact-us-title": "お問い合わせ",
-  "contact-us-text": "連絡先を詳しく記載してください。"
+  "contact-us-text": "連絡先を詳しく記載してください。",
+  "ads-text": "このプロジェクトを実現するためには、資金が必要です。もし私たちを助けてくださるなら、私たちのウェブサイトに広告を掲載することができます。"
 }
